# quickgrove

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
.github/: ci-test.yml
app/: airline-passenger.py  bootstrap.py  generate_examples.py  generation.py  process.py  reg_squarederror.py  trusty_scoring.py
benches/: predict.rs  trusty.rs
benches/common/: utils.rs
examples/: Cargo.toml  single_prediction.rs  tree_diff.rs
python-examples/: predict.py
python/benchmarks/: test_predict_airline.py  test_predict_diamonds.py  test_predict_synthetic.py
python/examples/: ibis_filter_condition.py  ibis_udf.py  predict.py  prune_predict.py
python/tests/: test_predict.py
python/trustpy/: __init__.py
python/trusty/: __init__.py
src/: lib.rs  predicates.rs  python.rs
src/loader/: model_loader.rs  xgboost.rs
src/objective/: mod.rs  scoring.rs
src/predicates/: mod.rs
src/tree/: binary_tree.rs  feature_type.rs  mod.rs  prunable_tree.rs  serde_helpers.rs  trees.rs  vec_tree.rs
tests/: integration_test.rs  test_recordbatch.rs
tests/common/: mod.rs
tests/data/: airline-passenger-satisfaction-boarding.csv  airline-passenger-satisfaction.csv  airline_filtered.csv  airline_filtered_float64.csv  diamonds_filtered.csv  diamonds_filtered_float64.csv  regression-mixed-types.csv
tests/data/reg:squarederror/: airline_data_filtered_mixed.csv  airline_satisfaction_data_filtered_trees_100_mixed.csv  diamonds_data_filtered_mixed.csv  diamonds_data_filtered_trees_100_mixed.csv
tests/models/: diamonds_model.json  diamonds_model_float64.json  pricing-model-100-mod.json  reg-squarederror.json
tests/models/reg:squarederror/: airline_model_trees_10_mixed.json  diamonds_model_trees_100_mixed.json  diamonds_model_trees_10_mixed.json
trusty-examples/: Cargo.toml  airline_prediction.rs  datafusion_udf.rs  datafusion_udtf.rs  single_prediction.rs
