[package]
name = "trusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "41.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_futures","async_tokio"] }

[[bench]]
name = "trusty"
harness = false
