[package]
name = "trusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "53.0"
rayon = "1.10.0"
thiserror = "1.0.64"
env_logger = "0.10.0"
log = "0.4.14"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_futures","async_tokio"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "trusty"
harness = false
