[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "trustpy"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Hussain Sultan", email = "hussain@letsql.com" },
]
dependencies = [
    "attrs>=24.2.0",
    "maturin>=1.7.8",
    "pandas>=2.2.3",
    "pyarrow==17.0.0",
    "pythran>=0.17.0 ; sys_platform == 'darwin'",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.1",
]

[dependency-groups]
dev = [
    "pytest-benchmark>=5.1.0",
    "pytest>=8.3.4",
    "ipython>=8.31.0",
]

[project.scripts]
generate-examples = "trustpy.generate_examples:main"

[tool.maturin]
python-source = "python"
module-name = "trustpy._internal"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 88
fix = true
